--- a/index.html
+++ b/index.html
@@ -69,6 +69,47 @@
       document.body.classList.add(theme);
     </script>
 
+<header class="header">
+  <canvas id="matrix"></canvas> <!-- Matrix effect canvas -->
+  <div class="menu-btn-container">
+      <div class="container">
+          <button type="button" class="menu-btn">menu</button>
+      </div>
+  </div>
+
+  <nav class="nav hidden">
+      <ol class="nav-items">
+          <li class="nav-item"><a href="#">Home</a></li>
+          <li class="nav-item"><a href="#work">My Work</a></li>
+          <li class="nav-item"><a href="#blog">See Blog</a></li>
+          <li class="nav-item"><a href="#skills">My Skills</a></li>
+          <li class="nav-item">
+              <a href="#contact" data-focused="last-focused">Contact</a>
+          </li>
+      </ol>
+  </nav>
+
+  <div class="container">
+      <div class="header-textbox">
+          <h1 class="h1">
+              <span>Hi, I'm Nana Amoako.</span>
+              <span>Developer & Graphic Designer.</span>
+          </h1>
+
+          <p class="header-text">
+              A CS Major @ Ashesi creating meaningful and mindblowing things.
+          </p>
+
+          <div class="header-btns">
+              <a href="#contact" class="btn btn-cta">Hire me</a>
+              <a href="#work" class="btn btn-secondary">See my work</a>
+          </div>
+      </div>
+  </div>
+</header>
+
+
+<!-- 
     <header class="header">
 
       <div class="menu-btn-container">
@@ -91,19 +132,16 @@
 
       <div class="container">
         <div class="header-textbox">
-          <!-- Replace with your name and job title -->
           <h1 class="h1">
             <span>Hi, I'm Nana Amoako.</span>
             <span>Developer & Graphic Designer.</span>
           </h1>
 
-          <!-- Add a small introductory paragraph about yourself -->
           <p class="header-text">
-            A CS Major @ Ashesi interested in creating meaningful and mindblowing things.
-            <!--
+            A CS Major @ Ashesi creating meaningful and mindblowing things.
               A frontend software engineer and interface designer who builds UX
               rich accessible and performant websites.
-              -->
+
           </p>
 
           <div class="header-btns">
@@ -114,10 +152,13 @@
       </div>
     </header>
 
+
+ -->
+
     <main>
       <section class="client">
         <div class="container">
-          <h2 class="h2">Trusted by</h2>
+          <h2 class="h2">Worked with</h2>
           <div class="logos">
             <!-- Replace alt with client/company name and src attributes of images with path to relative img of client logo -->
             <div class="logo-group">
