--- a/index.html
+++ b/index.html
@@ -93,8 +93,11 @@
       <div class="header-textbox">
           <h1 class="h1">
               <span>Hi, I'm Nana Amoako.</span>
+            </h1>
+
+            <h2 class="h2">
               <span>Developer & Graphic Designer.</span>
-          </h1>
+            </h2>
 
           <p class="header-text">
               A CS Major @ Ashesi creating meaningful and mindblowing things.
@@ -107,6 +110,9 @@
       </div>
   </div>
 </header>
+
+<div id="repo-container" class="project-list"></div>
+
 
 
 <!-- 
