Added nav bar buttons at the top

--- a/index.html
+++ b/index.html
@@ -72,12 +72,17 @@
 <header class="header">
   <canvas id="matrix"></canvas> <!-- Matrix effect canvas -->
   <div class="menu-btn-container">
-      <div class="container">
-          <button type="button" class="menu-btn">menu</button>
+      <div class="nav-buttons">
+        <button type="button" class="menu-btn" data-menu="toggle">Menu</button>
+          <!-- <button type="button" class="menu-btn">menu</button> -->
+          <button type="button" class="menu-btn">home</button>
+          <button type="button" class="menu-btn">projects</button>
+          <button type="button" class="menu-btn">about</button>
+          <button type="button" class="menu-btn">contact</button>
       </div>
   </div>
 
-  <nav class="nav hidden">
+  <!-- <nav class="nav hidden">
       <ol class="nav-items">
           <li class="nav-item"><a href="#">Home</a></li>
           <li class="nav-item"><a href="#work">My Work</a></li>
@@ -87,7 +92,7 @@
               <a href="#contact" data-focused="last-focused">Contact</a>
           </li>
       </ol>
-  </nav>
+  </nav> -->
 
   <div class="container">
       <div class="header-textbox">
@@ -112,54 +117,6 @@
 </header>
 
 <div id="repo-container" class="project-list"></div>
-
-
-
-<!-- 
-    <header class="header">
-
-      <div class="menu-btn-container">
-        <div class="container">
-          <button type="button"  class="menu-btn">menu</button>
-        </div>
-      </div>
-
-      <nav class="nav hidden">
-        <ol class="nav-items">
-          <li class="nav-item"><a href="#">Home</a></li>
-          <li class="nav-item"><a href="#work">My Work</a></li>
-          <li class="nav-item"><a href="#blog">See Blog</a></li>
-          <li class="nav-item"><a href="#skills">My Skills</a></li>
-          <li class="nav-item">
-            <a href="#contact" data-focused="last-focused">Contact</a>
-          </li>
-        </ol>
-      </nav>
-
-      <div class="container">
-        <div class="header-textbox">
-          <h1 class="h1">
-            <span>Hi, I'm Nana Amoako.</span>
-            <span>Developer & Graphic Designer.</span>
-          </h1>
-
-          <p class="header-text">
-            A CS Major @ Ashesi creating meaningful and mindblowing things.
-              A frontend software engineer and interface designer who builds UX
-              rich accessible and performant websites.
-
-          </p>
-
-          <div class="header-btns">
-            <a href="#contact" class="btn btn-cta">Hire me</a>
-            <a href="#work" class="btn btn-secondary">See my work</a>
-          </div>
-        </div>
-      </div>
-    </header>
-
-
- -->
 
 
 
