--- a/index.html
+++ b/index.html
@@ -131,15 +131,15 @@
     </header>
 
     <!-- Projects section -->
-    <section id="projects" class="project-list">
+    <section id="projects" class="project-section">
       <h2 class="h2">Projects</h2>
-      <!-- Projects section -->
       <div id="repo-container" class="project-list"></div>
     </section>
 
+
     <!-- About Cards -->
+    <h2 class="h2">About Me</h2>
     <section id="about" class="about-container">
-      <h2 class="h2">About Me</h2>
       <div class="profile-card">
         <img
           src="assets/images/profile.jpeg"
@@ -309,8 +309,8 @@
             </ol>
           </nav>
           <p class="footer-text">
-            &copy; <span>2024</span> - Portfolio still under construction.
-            Developed by
+            &copy; <span>2024</span> • 
+            Designed & Developed by
             <a
               target="_blank"
               rel="noopener"
