--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
     <meta
       name="description"
-      content="This is my portfolio. I am a CS Major at Ashesi University, a developer, and a part-time graphic designer. Feel free to explore my projects, articles, and any work that piques your interest. Contact me with any inquiries or collaborations."
+      content="Man of Many Talents."
     />
 
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Nana Amoako's Portfolio" />
     <meta
       itemprop="description"
-      content="This is my portfolio. I am a CS Major at Ashesi University, a developer, and a part-time graphic designer. Feel free to explore my projects, articles, and any work that piques your interest. Contact me with any inquiries or collaborations."
+      content="Man of Many Talents.""
     />
 
     <!-- Reference screenshot of updated site's header in place of content -->
@@ -29,7 +29,7 @@
     <meta property="og:title" content="Nana Amoako's Portfolio" />
     <meta
       property="og:description"
-      content="This is my portfolio. I am a CS Major at Ashesi University, a developer, and a part-time graphic designer. Feel free to explore my projects, articles, and any work that piques your interest. Contact me with any inquiries or collaborations."
+      content="Man of Many Talents.""
     />
 
     <!-- Reference screenshot of updated site's header in content -->
@@ -40,7 +40,7 @@
     <meta name="twitter:title" content="Nana Amoako's Portfolio" />
     <meta
       name="twitter:description"
-      content="This is my portfolio. I am a CS Major at Ashesi University, a developer, and a part-time graphic designer. Feel free to explore my projects, articles, and any work that piques your interest. Contact me with any inquiries or collaborations."
+      content="Man of Many Talents."
     />
 
     <!-- Reference screenshot of updated site's header in content -->
@@ -113,7 +113,7 @@
           </h2>
 
           <p class="header-text">
-            A CS Major @ Ashesi creating meaningful and mindblowing things.
+            Man of Many Talents (and Grace) creating meaningful and mindblowing things.
           </p>
 
           <div class="header-btns">
@@ -147,7 +147,7 @@
           class="profile-image"
         />
         <h3>Nana Amoako</h3>
-        <p>CS Major @ Ashesi University</p>
+        <p>Man of Many Talents (and Grace)</p>
         <div class="social-links">
           <a href="https://github.com/nanadotam" target="_blank" rel="noopener"
             >GitHub</a
